Teil 2 vorläufig fertig

--- a/tor-slides.tex
+++ b/tor-slides.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usetheme{Warsaw}
+
 \title{Mit Kryptographie die Welt retten}
 \subtitle{Cypherpunk in Theorie und Praxis}
 \author{Sebastian Beschke \\ \texttt{sebastian@sbeschke.de}}
@@ -151,11 +152,118 @@
 \section{Privatsphäre unter Beschuss}
 
 \begin{frame}
+\frametitle{Die Rolle von Kryptographie}
+
+\begin{itemize}
+	\item Kryptographie: Metier von Geheimdiensten und Geheimniskrämern?
+	\item Nicht im Informationszeitalter!\\Zum Beispiel\dots
+\end{itemize}
+\begin{columns}
+
+\column{0.5\textwidth}
+\pause	\includegraphics[height=0.2\textheight]{images/surveillancecamera.pdf}
+
+\column{0.5\textwidth}
+\pause	\includegraphics[height=0.2\textheight]{images/fbgoogle.png}
+
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{Was heißt eigentlich „Privatsphäre“?}
+	
+	\begin{itemize}
+		\item Privatsphäre ist nicht nur Verschlüsselung:
+		\begin{itemize}
+			\item Anonymität
+			\item Abstreitbarkeit
+			\item Authentifizierung
+		\end{itemize}
+\pause		\item Privatsphäre ist nicht Geheimnistuerei:
+		\begin{itemize}
+			\item \textit{Geheime} Informationen soll \textit{niemand} erfahren
+			\item \textit{Private} Informationen soll \textit{nicht jeder} erfahren
+		\end{itemize}
+	\end{itemize}
+
+	\begin{quote}
+		“Privacy is the power to selectively reveal oneself to the world.”\\
+		\textnormal{Eric Hughes, A Cypherpunk’s Manifesto}
+	\end{quote}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Der Kampf um die Privatsphäre}
+
+	\begin{itemize}
+		\item Privatsphäre ist ein wiederkehrendes Thema der politischen Debatte in Deutschland:
+		\begin{itemize}
+			\item Klarnamenspflicht im Internet
+			\item Vorratsdatenspeicherung
+			\item Bundestrojaner
+			\item Zensur(sula)gesetz
+			\item Übermittlung von Fluggastdaten
+			\item usw. usf.
+		\end{itemize}
+
+\pause		\item oder auch kürzlich:
+	\end{itemize}
+	\begin{quote}
+		„Eine anonyme Teilhabe am politischen Meinungs- und Willensbildungsprozess ist abzulehnen.“\\
+		\textnormal{Positionspapier der CDU/CSU-Fraktion im Bundestag zum Thema „Freiheit des Internet“}
+	\end{quote}
+\end{frame}
+
+\begin{frame}
+\frametitle{Diskrepanzen}
+
+	\begin{itemize}
+		\item In der „realen Welt“ ist Privatsphäre oft der Standard.
+		\begin{itemize}
+			\item Bargeld, Briefgeheimnis…
+		\end{itemize}
+	
+		\ \\
+	
+		\item In der digitalen Welt sieht das meistens anders aus:
+		\begin{itemize}
+			\item Standardmäßig unverschlüsselte Übertragung von Webseiten, E-Mail, Chatnachrichten\dots
+			\item Internet-Verbindungen sind über den Provider zurückverfolgbar
+		\end{itemize}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Das \textit{Cypherpunk’s Manifesto}}
+
+	\begin{itemize}
+		\item Eine offene Gesellschaft braucht Privatsphäre
+		\item Regierungen und Konzerne werden Privatsphäre nicht freiwillig schaffen
+		\item Kryptographie ist das Mittel zur Wahrung der Privatsphäre
+		\item Cypherpunks gießen diese Mittel in Software
+	\end{itemize}
+
+	\begin{quote}
+		“Cypherpunks write code.”
+	\end{quote}
+\end{frame}
+
+\begin{frame}
+\frametitle{Interessante Projekte}
+
+	\begin{itemize}
+		\item Bitcoin
+		\item Freenet
+		\item Off-the-Record messaging
+		\item Tor
+	\end{itemize}
 \end{frame}
 
 \section{Die Anonymisierungssoftware Tor}
 
 \begin{frame}
+
 \end{frame}
 
 \end{document}
