--- a/tor-slides.tex
+++ b/tor-slides.tex
@@ -332,4 +332,18 @@
 \end{itemize}
 \end{frame}
 
+\section{Zusammenfassung}
+
+\begin{frame}
+\frametitle{Zusammenfassung}
+
+\begin{itemize}
+	\item Der Schutz der Privatsphäre ist wichtig
+	\item Geschickter Einsatz von Kryptographie kann hierbei helfen
+	\item Es ist schwer, ein wasserdichtes Kryptosystem zu bauen
+	\item Selbst ein wasserdichtes System kann durch Probleme auf anderen Ebenen außer Kraft gesetzt werden
+	\item Aber: Die Grundprinzipien sind einfach zu verstehen – Jede/r kann mitdenken
+\end{itemize}
+\end{frame}
+
 \end{document}
