RC2 Anhang eingefügt

--- a/tor-slides.tex
+++ b/tor-slides.tex
@@ -360,4 +360,20 @@
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\frametitle{Quellen und Anhang}
+
+\texttt{sebastian@sbeschke.de (OpenPGP: 0x78FE61BF)}
+
+\begin{itemize}
+	\item Die Vortragsmaterialien sind CC-BY-SA: Namensnennung, Weitergabe unter gleichen Bedingungen.
+	\item Buchtipp: Steven Levy, Crypto - How the code rebels beat the government - saving privacy in the digital age
+	\item Mehr Krypto-Hintergründe: (Englische) Wikipedia über die angesprochenen Themen
+	\item Mehr über Anonymität: \url{http://freehaven.net/anonbib/date.html}
+	\item Das Design von Tor: \url{https://svn.torproject.org/svn/projects/design-paper/tor-design.html}
+	\item Mehr zum Chaostreff Tübingen: \url{http://chaostreff.klappezu.org}
+\end{itemize}
+
+\end{frame}
+
 \end{document}
