--- a/tor-slides.tex
+++ b/tor-slides.tex
@@ -277,10 +277,10 @@
 \frametitle{Interessante Projekte}
 
 	\begin{itemize}
-		\item Bitcoin
-		\item Freenet
-		\item Off-the-Record messaging
-		\item Tor
+		\item Bitcoin (\url{http://bitcoin.org})
+		\item Freenet (\url{http://freenetproject.org})
+		\item Off-the-Record messaging (\url{http://www.cypherpunks.ca/otr/})
+		\item Tor (\url{https://www.torproject.org})
 	\end{itemize}
 \end{frame}
 
@@ -366,7 +366,7 @@
 \texttt{sebastian@sbeschke.de (OpenPGP: 0x78FE61BF)}
 
 \begin{itemize}
-	\item Die Vortragsmaterialien sind CC-BY-SA: Namensnennung, Weitergabe unter gleichen Bedingungen.
+	\item Die Vortragsmaterialien sind CC-BY-SA: Namensnennung, Weitergabe unter gleichen Bedingungen. Zu finden unter: \url{https://github.com/sbeschke/tor-presentation}
 	\item Buchtipp: Steven Levy, Crypto - How the code rebels beat the government - saving privacy in the digital age
 	\item Mehr Krypto-Hintergründe: (Englische) Wikipedia über die angesprochenen Themen
 	\item Mehr über Anonymität: \url{http://freehaven.net/anonbib/date.html}
